translated a few storytitles
- translated newer yield text, (ENCYCLOPEDIA)
- minor typos fixed
- minor other fixes

--- a/Translations/German/text-misc-change.xml
+++ b/Translations/German/text-misc-change.xml
@@ -576,7 +576,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COLORCLASS_YIELDS</zType>
-		<Translation>Gewinne</Translation>
+		<Translation>Erträge</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COLORCLASS_LAWS</zType>
