--- a/Translations/German/text-yield-change.xml
+++ b/Translations/German/text-yield-change.xml
@@ -24,11 +24,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CIVICS_ENCYCLOPEDIA</zType>
-		<Translation>A link(IMPROVEMENT_QUARRY) built on link(RESOURCE_MARBLE) will also provide Civics{YIELD_CIVICS}. In the mid-game, link(IMPROVEMENT_COURTHOUSE_1,2) and their link(SPECIALISTCLASS_SCRIBE,1) provide additional Civics{YIELD_CIVICS}.
+		<Translation>Ein link(IMPROVEMENT_QUARRY) auf link(RESOURCE_MARBLE) zu errichten wird außerdem Verwaltung{YIELD_CIVICS} verliehen. Im mid-game, link(IMPROVEMENT_COURTHOUSE_1,2) und deren link(SPECIALISTCLASS_SCRIBE,1) gewähren zusätzliche Verwaltung{YIELD_CIVICS}.
 
-Families that are link(FAMILYCLASS_STATESMEN), link(FAMILYCLASS_PATRONS), or link(FAMILYCLASS_SAGES) are better at generating Civics{YIELD_CIVICS} in their cities.
+Familien der link(FAMILYCLASS_STATESMEN), link(FAMILYCLASS_PATRONS), oder link(FAMILYCLASS_SAGES) sind besser im generieren von Verwaltung{YIELD_CIVICS} in deren Städten.
 
-Wonders such as link(IMPROVEMENT_COLOSSUS) or link(IMPROVEMENT_ACROPOLIS), or the link(THEOLOGY_GNOSTICISM) link(CONCEPT_THEOLOGY) are other ways of boosting Civics{YIELD_CIVICS}.</Translation>
+Wunder, wie link(IMPROVEMENT_COLOSSUS) oder link(IMPROVEMENT_ACROPOLIS) oder die link(THEOLOGY_GNOSTICISM) link(CONCEPT_THEOLOGY) sind andere Wege um Verwaltung{YIELD_CIVICS} anzukurbeln.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING</zType>
@@ -40,9 +40,9 @@ Wonders such as link(IMPROVEMENT_COLOSSUS) or link(IMPROVEMENT_ACROPOLIS), or th
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING_ENCYCLOPEDIA</zType>
-		<Translation>link(IMPROVEMENT_MINE,2) provide Training{YIELD_TRAINING} if built over link(RESOURCE_ORE). Later, you get link(IMPROVEMENT_RANGE,2) and the link(MISSION_RALLY_TROOPS) mission. Both link(IMPROVEMENT_BARRACKS,2) and link(IMPROVEMENT_RANGE,2) can build link(SPECIALISTCLASS_OFFICER) Specialists, which can provide a lot of Training{YIELD_TRAINING}.
+		<Translation>link(IMPROVEMENT_MINE,2) liefern Training{YIELD_TRAINING} wenn über link(RESOURCE_ORE) errichtet. Später bekommst du link(IMPROVEMENT_RANGE,2) und die link(MISSION_RALLY_TROOPS) Missionen. Beide link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2) können link(SPECIALISTCLASS_OFFICER) Spezialisten ausbilden, welche eine Menge Training{YIELD_TRAINING} liefern können.
 
-Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link(FAMILYCLASS_HUNTERS) are better at generating Training{YIELD_TRAINING} in their cities.</Translation>
+Familien der link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), oder link(FAMILYCLASS_HUNTERS) sind besser im generieren von Training{YIELD_TRAINING} in deren Städten.</Translation>
 	</Entry>
 	<Entry>	
 		<zType>TEXT_YIELD_CULTURE</zType>
@@ -98,7 +98,7 @@ Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_FOOD_HELP</zType>
-		<Translation>The best source of {YIELD_FOOD}Food is link(IMPROVEMENT_FARM,2), which are most fruitful next to link(CONCEPT_FRESH_WATER) and on link(TERRAIN_LUSH) Terrain. {YIELD_FOOD}Food is needed to feed your link(CONCEPT_POPULATION) and to produce new link(UNIT_SETTLER,2).</Translation>
+		<Translation>Die Beste Quelle für {YIELD_FOOD}Nahrung sind link(IMPROVEMENT_FARM,2), welche banachbart zu link(CONCEPT_FRESH_WATER) und auf link(TERRAIN_LUSH) Gelände am ergiebigsten sind. {YIELD_FOOD}Nahrung wird benötigt um eure link(CONCEPT_POPULATION) zu ernähren und um neue link(UNIT_SETTLER,2) auszubilden.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_IRON</zType>
@@ -106,7 +106,7 @@ Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_IRON_HELP</zType>
-		<Translation>The primary source of {YIELD_IRON}Iron is link(IMPROVEMENT_MINE,2), which are most productive on link(RESOURCE_ORE) and/or link(HEIGHT_HILL,2). {YIELD_IRON}Iron is needed to build many types of Military Units, including link(UNIT_WARRIOR,2) and link(UNIT_AXEMAN,2).</Translation>
+		<Translation>Die Hauptquelle von {YIELD_IRON}Eisen sind link(IMPROVEMENT_MINE,2), welche auf link(RESOURCE_ORE) und/oder link(HEIGHT_HILL,2) am ergiebigsten sind. {YIELD_IRON}Iron wird benötigt um unterschiedliche Militär Einheiten auszubilden, darunter auch link(UNIT_WARRIOR,2) und link(UNIT_AXEMAN,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_STONE</zType>
@@ -114,7 +114,7 @@ Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_STONE_HELP</zType>
-		<Translation>The primary source of {YIELD_STONE}Stone is link(IMPROVEMENT_QUARRY,2), which are most productive on link(RESOURCE_MARBLE), on link(TERRAIN_ARID) Terrain, and adjacent to link(HEIGHT_MOUNTAIN,2). {YIELD_STONE}Stone is needed primarily to build Improvements, such as link(IMPROVEMENTCLASS_SHRINE,2), and link(CONCEPT_PROJECT,2), such as link(PROJECT_WALLS).</Translation>
+		<Translation>Die Hauptquelle von {YIELD_STONE}Stein sind link(IMPROVEMENT_QUARRY,2), welcher auf link(RESOURCE_MARBLE), auf link(TERRAIN_ARID) Gelände und benachbart zu link(HEIGHT_MOUNTAIN,2) am ergiebigsten sind. {YIELD_STONE}Stein wird hauptsähclich benötigt um Verbesserungen zu errichten, wie etwa als link(IMPROVEMENTCLASS_SHRINE,2), und link(CONCEPT_PROJECT,2), wie als link(PROJECT_WALLS).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_WOOD</zType>
@@ -122,6 +122,6 @@ Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_WOOD_HELP</zType>
-		<Translation>{YIELD_WOOD}Wood can be gathered either by chopping down link(VEGETATION_TREES) or by building link(IMPROVEMENT_LUMBERMILL,2) instead. {YIELD_WOOD}Wood is necessary for building City Improvements (like link(IMPROVEMENT_BARRACKS)), Military Units (link(UNIT_ARCHER,2)), and link(UNITTRAIT_SHIP) Units (link(UNIT_BIREME,2)).</Translation>
+		<Translation>{YIELD_WOOD}Holz kann entweder durch Fällen von link(VEGETATION_TREES) oder stattdessen durch errichten von link(IMPROVEMENT_LUMBERMILL,2) gesammelt werden . {YIELD_WOOD}Holz ist erforderlich um Stadt Verbesserungenen zu errichten, (wie zB. link(IMPROVEMENT_BARRACKS)), Militär Einheiten (link(UNIT_ARCHER,2)) und link(UNITTRAIT_SHIP) Einheiten (link(UNIT_BIREME,2)).</Translation>
 	</Entry>
 </Root>
